<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Steam Property</string>
    <string name="action_settings">Settings</string>
    <string name="press">Pressure</string>
    <string name="temp">Temperature</string>
    <string name="enh">Enthaply</string>
    <string name="quality">Quality</string>
    <string name="IFC_INLINE">IFC 97 OR 67<sub>kj/kg</sub></string>
    <string name="ens">Entropy</string>
    <string name="calc">Calculation</string>
    <string name="efficiencetitle">Turbine Efficiency</string>
    <string name="inletpress">Inlet Press</string>
    <string name="inlettemp">Inlet Temp</string>
    <string name="outletpress">Outlet Press</string>
    <string name="outlettemp">Outlet Temp</string>
    <string name="Efficience">Efficience</string>
    <string name="vol">Volume</string>
    <string name="cp">Cp</string>
    <string name="cv">Cv</string>
    <string name="e">Energy</string>
    <string name="dvis">D-Viscosity</string>
    <string name="kvis">K-Viscosity</string>
    <string name="ks">Entropy-Index</string>
    <string name="error">Exceed Limit</string>
    <string name="ramd">Thermconduct </string>
    <string name="prn">Prandtl</string>
    <string name="eps">Dielectric</string>
    <string name="ssp">Sound speed</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="water_title">Water Property</string>
    <string name="eff_title">Turbine Efficience</string>
    <string name="IFC_SUMMARY">Check-IFC97 UnCheck-IFC67</string>
    <string name="dialog_title_list_preference">Select IFC97 or IFC67 Formula</string>
    
    <string name="condensor_pressure">Condensor Pressure</string>
    <string name="condensor_heat_duty">Condensor Heat Duty</string>
    <string name="circulating_water_flow">Circulating Water Flow Rate</string>
    <string name="circulating_water_inlet_temperature">Circulating Water Inlet Temperature</string>
    <string name="tube_water_velocity">Tube_Water_Velocity</string>
    <string name="cleanliness_factor">Cleanliness Factor</string>
    <string name="tube_od">Tube OD</string>
    <string name="tube_id">Tube ID</string>
    <string name="tube_material">Tube Material</string>
    <string name="circulating water type">Circulating Water Type</string>
</resources>