<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:input="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/relative_ad1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_ad1" 
        >

        <LinearLayout
            android:id="@+id/ef"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:background="#ff6600"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                     android:text="@string/efficiencetitle"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tv_eff"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    
                    android:text=""
                    android:textSize="65sp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" 
                >

                <com.example.winsteam.DataInputControl
                    android:id="@+id/inlet_pressure"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    input:text="@string/inletpress"
                    input:type="press" 
                    android:paddingLeft="8dp"
                	android:paddingRight="8dp">
                </com.example.winsteam.DataInputControl>

                <com.example.winsteam.DataInputControl
                    android:id="@+id/inlet_temp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    input:text="@string/inlettemp"
                    input:type="temp" 
                    android:paddingLeft="8dp"
                	android:paddingRight="8dp">
                </com.example.winsteam.DataInputControl>

                <com.example.winsteam.DataInputControl
                    android:id="@+id/outlet_pressure"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    input:text="@string/outletpress"
                    input:type="press"
                    android:paddingLeft="8dp"
                	android:paddingRight="8dp" >
                </com.example.winsteam.DataInputControl>

                <com.example.winsteam.DataInputControl
                    android:id="@+id/outlet_temp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    input:text="@string/outlettemp"
                    input:type="temp"
                    android:paddingLeft="8dp"
                	android:paddingRight="8dp" >
                </com.example.winsteam.DataInputControl>

                <Button
                    android:id="@+id/btn_ecalc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calc" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>